--- a/core/edge/s3_read_on_wasm/Cargo.toml
+++ b/core/edge/s3_read_on_wasm/Cargo.toml
@@ -27,9 +27,10 @@ license.workspace = true
 crate-type = ["cdylib"]
 
 [dependencies]
-opendal = { path = "../../", default-features = false, features = ["services-s3"] }
+opendal = { path = "../../", default-features = false, features = ["services-s3", "services-gdrive"] }
 wasm-bindgen = "0.2.89"
 wasm-bindgen-futures = "0.4.39"
+tokio = { version = "1.34" }
 
 [dev-dependencies]
 wasm-bindgen-test = "0.3.0"
